--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,8 +19,28 @@
   </div>
 </div>
 
-<h2>Posts</h2>
-<%= render @user.posts %>
+<% if user_has_posts? %>
+  <h2>Posts</h2>
+  <%= render @user.posts %>
+<% else %>
+  <h2><%= @user.name %> has not submitted any posts yet.</h2>
+<% end %>
 
-<h2>Comments</h2>
-<%= render @user.comments %>
+<% if user_has_comments? %>
+  <h2>Comments</h2>
+  <%= render @user.comments %>
+<% else %>
+  <h2><%= @user.name %> has not submitted any comments yet.</h2>
+<% end %>
+
+<h2>Favorites</h2>
+<% @user.favorites.each do |favorite| %>
+  <% if avatar_url %>
+    <div class="media-left">
+      <%= image_tag avatar_url, class: 'media-object' %>
+    </div>
+  <% end %>
+  <div class="media-right">
+    <%= render partial: 'posts/post', locals: { post: favorite.post } %>
+  </div>
+<% end %>
